@@ -273,6 +273,14 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
           </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.plugin.version}</version>
+            <configuration>
+              <argLine>@{argLine} --add-modules=ALL-MODULE-PATH</argLine>
+            </configuration>
+          </plugin>
         </plugins>
       </build>
     </profile>
